Replace in-process test with forked-JVM deadlock test
The <clinit> deadlock can only be reproduced in a fresh JVM where
classes haven't been loaded yet. Replace the reflection-based
in-process test with one that forks child JVM processes using
ProcessBuilder, each running 6 concurrent threads that trigger
<clinit> of different Cosmos classes simultaneously. A 30-second
timeout detects deadlocks. Runs 3 iterations for reliability.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>